build: replace flake8 and black with ruff (#24)
Co-authored-by: Eden Zimbelman <eden.zimbelman@salesforce.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
-[tool.black]
-line-length = 125
+[tool.ruff]
+[tool.ruff.lint]
+[tool.ruff.format]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
